Fix issue on mobile navigation menu [finishes #158400657]

--- a/UI/css/style_two.css
+++ b/UI/css/style_two.css
@@ -59,6 +59,12 @@ header #burger, header #logout {
     padding: 10px 5px;
 }
 
+header #menu .trigger-menu {
+    position: absolute;
+    top: 2px;
+    right: 5px;
+}
+
 header #burger {
     display: none !important;
 }
